force-app/main/default/objects/Property__c/fields/Additional_Rooms__c.field-meta.xml
<CustomField>
    <fullName>Additional_Rooms__c</fullName>
    <label>Additional Rooms</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Servent</fullName>
            </value>
            <value>
                <fullName>Study</fullName>
            </value>
            <value>
                <fullName>Pooja</fullName>
            </value>
            <value>
                <fullName>Store</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>