force-app/main/default/objects/Property__c/fields/Age_of_Property_in_month__c.field-meta.xml
<CustomField>
    <fullName>Age_of_Property_in_month__c</fullName>
    <label>Year of Built</label>
    <length>50</length>
    <type>Text</type>
</CustomField>