force-app/main/default/objects/Property__c/fields/Amenities_Features__c.field-meta.xml
<CustomField>
    <fullName>Amenities_Features__c</fullName>
    <label>Amenities / Features</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lift</fullName>
            </value>
            <value>
                <fullName>Park</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Rain Water Harvesting</fullName>
            </value>
            <value>
                <fullName>Swimming Pool</fullName>
            </value>
            <value>
                <fullName>Gym</fullName>
            </value>
            <value>
                <fullName>Water Storage</fullName>
            </value>
            <value>
                <fullName>Vaastu Compliant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>