force-app/main/default/objects/Property__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <label>Amount (website)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>