force-app/main/default/objects/Property__c/fields/Amount_Calculation__c.field-meta.xml
<CustomField>
    <fullName>Amount_Calculation__c</fullName>
    <label>Amount (Calculation)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>