force-app/main/default/objects/Property__c/fields/Apartment_Society_Name__c.field-meta.xml
<CustomField>
    <fullName>Apartment_Society_Name__c</fullName>
    <label>Apartment / Society Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>