force-app/main/default/objects/Property__c/fields/Area_of_Flat_Apartment__c.field-meta.xml
<CustomField>
    <fullName>Area_of_Flat_Apartment__c</fullName>
    <formula>if(
TEXT(Size_in__c) = &apos;Sq. Ft.&apos;,
(Size_in_Sq_Foot__c),
if(
TEXT(Size_in__c) = &apos;Sq. Yards&apos;,
((Size_in_Sq_Foot__c) / 9),
if(
TEXT(Size_in__c) = &apos;Sq. Mtr.&apos;,
((Size_in_Sq_Foot__c) / 10.764),
((Size_in_Sq_Foot__c) / 43560)
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Area of Flat/Apartment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>