force-app/main/default/objects/Property__c/fields/Area_of_House_Villa__c.field-meta.xml
<CustomField>
    <fullName>Area_of_House_Villa__c</fullName>
    <formula>if(
TEXT(Size_in__c) = &apos;Sq. Yards&apos;,
(Size_in_Sq_Yards__c),
if(
TEXT(Size_in__c) = &apos;Sq. Ft.&apos;,
((Size_in_Sq_Yards__c) * 9),
if(
TEXT(Size_in__c) = &apos;Sq. Mtr.&apos;,
((Size_in_Sq_Yards__c) / 1.196),
((Size_in_Sq_Yards__c) / 4840)
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Area of House/Villa</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>