force-app/main/default/objects/Property__c/fields/Area_of_Plot_Land__c.field-meta.xml
<CustomField>
    <fullName>Area_of_Plot_Land__c</fullName>
    <formula>if(
TEXT(Size_in__c) = &apos;Acre&apos;,
(Size_in_acer__c),
if(
TEXT(Size_in__c) = &apos;Sq. Ft.&apos;,
((Size_in_acer__c) * 43560),
if(
TEXT(Size_in__c) = &apos;Sq. Mtr.&apos;,
((Size_in_acer__c) * 4047),
((Size_in_acer__c) * 4840)
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Area of Plot/Land</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>