force-app/main/default/objects/Property__c/fields/Area_of_Shop_Space__c.field-meta.xml
<CustomField>
    <fullName>Area_of_Shop_Space__c</fullName>
    <formula>if(
TEXT(Size_in__c) = &apos;Sq. Mtr.&apos;,
(Size_in_Sq_m__c),
if(
TEXT(Size_in__c) = &apos;Sq. Ft.&apos;,
((Size_in_Sq_m__c) * 10.764),
if(
TEXT(Size_in__c) = &apos;Sq. Yards&apos;,
((Size_in_Sq_m__c) * 1.196),
((Size_in_Sq_m__c) / 4047)
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Area of Shop/Space</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>