force-app/main/default/objects/Property__c/fields/Bathroom__c.field-meta.xml
<CustomField>
    <fullName>Bathroom__c</fullName>
    <label>Bathroom</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>