force-app/main/default/objects/Property__c/fields/BHK__c.field-meta.xml
<CustomField>
    <fullName>BHK__c</fullName>
    <label>BHK</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 BHK</fullName>
            </value>
            <value>
                <fullName>1.5 BHK</fullName>
            </value>
            <value>
                <fullName>2 BHK</fullName>
            </value>
            <value>
                <fullName>2.5 BHK</fullName>
            </value>
            <value>
                <fullName>3 BHK</fullName>
            </value>
            <value>
                <fullName>4 BHK</fullName>
            </value>
            <value>
                <fullName>5 BHK</fullName>
            </value>
            <value>
                <fullName>Studio</fullName>
            </value>
            <value>
                <fullName>Penthouse</fullName>
            </value>
            <value>
                <fullName>5+ BHK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>