force-app/main/default/objects/Property__c/fields/Booking_Amount_Details__c.field-meta.xml
<CustomField>
    <fullName>Booking_Amount_Details__c</fullName>
    <label>Booking Amount Details</label>
    <type>TextArea</type>
</CustomField>