force-app/main/default/objects/Property__c/fields/Builtup_Area__c.field-meta.xml
<CustomField>
    <fullName>Builtup_Area__c</fullName>
    <label>Builtup Area</label>
    <length>50</length>
    <type>Text</type>
</CustomField>