force-app/main/default/objects/Property__c/fields/Commission_pc_of_Price__c.field-meta.xml
<CustomField>
    <fullName>Commission_pc_of_Price__c</fullName>
    <label>Commission % of Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>