force-app/main/default/objects/Property__c/fields/Cover__c.field-meta.xml
<CustomField>
    <fullName>Cover__c</fullName>
    <label>Cover Area</label>
    <length>200</length>
    <type>Text</type>
</CustomField>