force-app/main/default/objects/Property__c/fields/Dimension__c.field-meta.xml
<CustomField>
    <fullName>Dimension__c</fullName>
    <label>Dimension</label>
    <length>50</length>
    <type>Text</type>
</CustomField>