force-app/main/default/objects/Property__c/fields/Electricity__c.field-meta.xml
<CustomField>
    <fullName>Electricity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Electricity</label>
    <type>Checkbox</type>
</CustomField>