force-app/main/default/objects/Property__c/fields/Expected_Price__c.field-meta.xml
<CustomField>
    <fullName>Expected_Price__c</fullName>
    <label>Price</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>