force-app/main/default/objects/Property__c/fields/Extra_Govt_Charges__c.field-meta.xml
<CustomField>
    <fullName>Extra_Govt_Charges__c</fullName>
    <label>Extra Govt. Charges</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>