force-app/main/default/objects/Property__c/fields/Fixed_Commission_Amount__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Commission_Amount__c</fullName>
    <label>Fixed Commission Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>