force-app/main/default/objects/Property__c/fields/Flat_Number__c.field-meta.xml
<CustomField>
    <fullName>Flat_Number__c</fullName>
    <label>Flat Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>