force-app/main/default/objects/Property__c/fields/Flats_on_each_Floor__c.field-meta.xml
<CustomField>
    <fullName>Flats_on_each_Floor__c</fullName>
    <label>Flats on each Floor</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>