force-app/main/default/objects/Property__c/fields/Front_Dept__c.field-meta.xml
<CustomField>
    <fullName>Front_Dept__c</fullName>
    <label>Front Dept</label>
    <length>255</length>
    <type>Text</type>
</CustomField>