force-app/main/default/objects/Property__c/fields/Gas__c.field-meta.xml
<CustomField>
    <fullName>Gas__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gas</label>
    <type>Checkbox</type>
</CustomField>