force-app/main/default/objects/Property__c/fields/GST__c.field-meta.xml
<CustomField>
    <fullName>GST__c</fullName>
    <label>G.S.T. (%)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>