force-app/main/default/objects/Property__c/fields/Loan_Upto__c.field-meta.xml
<CustomField>
    <fullName>Loan_Upto__c</fullName>
    <label>Loan Upto (%)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>