force-app/main/default/objects/Property__c/fields/Location_Property_Advantages__c.field-meta.xml
<CustomField>
    <fullName>Location_Property_Advantages__c</fullName>
    <label>Location/Property Advantages</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Close to School</fullName>
            </value>
            <value>
                <fullName>Close to Market</fullName>
            </value>
            <value>
                <fullName>Close to Hospital</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>