force-app/main/default/objects/Property__c/fields/Looking_For__c.field-meta.xml
<CustomField>
    <fullName>Looking_For__c</fullName>
    <label>Looking For</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rent</fullName>
            </value>
            <value>
                <fullName>Sale</fullName>
            </value>
            <value>
                <fullName>Buy</fullName>
                <isActive>false</isActive>
                <label>Buy</label>
            </value>
            <value>
                <fullName>Commercial Space/Shop</fullName>
                <isActive>false</isActive>
                <label>Commercial Space/Shop</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>