force-app/main/default/objects/Property__c/fields/Membership_Charges__c.field-meta.xml
<CustomField>
    <fullName>Membership_Charges__c</fullName>
    <label>Membership Charges</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>