force-app/main/default/objects/Property__c/fields/No_Of_Floors_Allowed_For_Construction__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Floors_Allowed_For_Construction__c</fullName>
    <label># Of Floors Allowed For Construction</label>
    <length>50</length>
    <type>Text</type>
</CustomField>