force-app/main/default/objects/Property__c/fields/Number_of_Open_Sides__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Open_Sides__c</fullName>
    <label>Number of Open Sides</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>