force-app/main/default/objects/Property__c/fields/Open__c.field-meta.xml
<CustomField>
    <fullName>Open__c</fullName>
    <label>Open Area</label>
    <length>200</length>
    <type>Text</type>
</CustomField>