force-app/main/default/objects/Property__c/fields/Other_Charges__c.field-meta.xml
<CustomField>
    <fullName>Other_Charges__c</fullName>
    <label>Other Charges</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>