force-app/main/default/objects/Property__c/fields/Other_Feature__c.field-meta.xml
<CustomField>
    <fullName>Other_Feature__c</fullName>
    <label>Other Feature</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Property in a gated society</fullName>
            </value>
            <value>
                <fullName>Corner Property</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>