force-app/main/default/objects/Property__c/fields/Overlooking__c.field-meta.xml
<CustomField>
    <fullName>Overlooking__c</fullName>
    <label>Overlooking</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Park</fullName>
            </value>
            <value>
                <fullName>Main Road</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>