force-app/main/default/objects/Property__c/fields/Ownership__c.field-meta.xml
<CustomField>
    <fullName>Ownership__c</fullName>
    <label>Ownership</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Freehold</fullName>
            </value>
            <value>
                <fullName>Leasehold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>