force-app/main/default/objects/Property__c/fields/Plot_Number__c.field-meta.xml
<CustomField>
    <fullName>Plot_Number__c</fullName>
    <label>House/Plot Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>