force-app/main/default/objects/Property__c/fields/Possessions_Status__c.field-meta.xml
<CustomField>
    <fullName>Possessions_Status__c</fullName>
    <label>Possessions Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ready to move</fullName>
            </value>
            <value>
                <fullName>Under Construction</fullName>
            </value>
            <value>
                <fullName>Immediate</fullName>
            </value>
            <value>
                <fullName>After some time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>