force-app/main/default/objects/Property__c/fields/Power_Back_Up__c.field-meta.xml
<CustomField>
    <fullName>Power_Back_Up__c</fullName>
    <label>Power Back Up</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full</fullName>
            </value>
            <value>
                <fullName>Partial</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>