force-app/main/default/objects/Property__c/fields/Price_per_yard__c.field-meta.xml
<CustomField>
    <fullName>Price_per_yard__c</fullName>
    <label>Price per yard</label>
    <length>50</length>
    <type>Text</type>
</CustomField>