force-app/main/default/objects/Property__c/fields/Primary_Location__c.field-meta.xml
<CustomField>
    <fullName>Primary_Location__c</fullName>
    <label>Primary Location</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>City__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Adarsh Nagar</fullName>
            </value>
            <value>
                <fullName>Ajay Nagar</fullName>
            </value>
            <value>
                <fullName>Agra gate</fullName>
            </value>
            <value>
                <fullName>Anasagar Link Road</fullName>
            </value>
            <value>
                <fullName>Ansal City, Main Sikar Road</fullName>
            </value>
            <value>
                <fullName>Bhagwanpura</fullName>
            </value>
            <value>
                <fullName>Boraj</fullName>
            </value>
            <value>
                <fullName>Civil Lines</fullName>
                <label>Civil LInes</label>
            </value>
            <value>
                <fullName>Chahchiyawas</fullName>
            </value>
            <value>
                <fullName>Chandravardai</fullName>
            </value>
            <value>
                <fullName>Dargah Baazar</fullName>
            </value>
            <value>
                <fullName>Foysagar Road</fullName>
            </value>
            <value>
                <fullName>Gagwana</fullName>
            </value>
            <value>
                <fullName>Ganj</fullName>
            </value>
            <value>
                <fullName>Gulab Bari</fullName>
            </value>
            <value>
                <fullName>Hari Bhau Upadhyay Nagar</fullName>
            </value>
            <value>
                <fullName>Hathi Khera</fullName>
            </value>
            <value>
                <fullName>Honkra</fullName>
            </value>
            <value>
                <fullName>Jaipur Road</fullName>
            </value>
            <value>
                <fullName>Kotra</fullName>
            </value>
            <value>
                <fullName>Kayad</fullName>
            </value>
            <value>
                <fullName>Kesar Ganj</fullName>
            </value>
            <value>
                <fullName>Kharkheri</fullName>
            </value>
            <value>
                <fullName>Kundan Nagar</fullName>
            </value>
            <value>
                <fullName>Ladpura</fullName>
            </value>
            <value>
                <fullName>Lohagal</fullName>
            </value>
            <value>
                <fullName>Madar Gate</fullName>
            </value>
            <value>
                <fullName>Maharana Pratap Nagar</fullName>
            </value>
            <value>
                <fullName>Makadwali</fullName>
            </value>
            <value>
                <fullName>Mansarovar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>