force-app/main/default/objects/Property__c/fields/Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Name__c</fullName>
    <label>Project Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dynasty</fullName>
            </value>
            <value>
                <fullName>Astitva</fullName>
            </value>
            <value>
                <fullName>Rangoli Ashiyana</fullName>
            </value>
            <value>
                <fullName>Vatika</fullName>
            </value>
            <value>
                <fullName>Shir Pinnacle</fullName>
            </value>
            <value>
                <fullName>Hills Ajmer</fullName>
            </value>
            <value>
                <fullName>Chandrakala Vihar</fullName>
            </value>
            <value>
                <fullName>Saarth Pratham</fullName>
            </value>
            <value>
                <fullName>Sky Tower</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>