force-app/main/default/objects/Property__c/fields/Property_Code__c.field-meta.xml
<CustomField>
    <fullName>Property_Code__c</fullName>
    <label>Property Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RQSF (New)</fullName>
            </value>
            <value>
                <fullName>RQSF (Resale)</fullName>
            </value>
            <value>
                <fullName>RQSF (Resale New)</fullName>
            </value>
            <value>
                <fullName>RQSP</fullName>
            </value>
            <value>
                <fullName>RQSH</fullName>
            </value>
            <value>
                <fullName>RQSC</fullName>
            </value>
            <value>
                <fullName>RQSPa (Agri)</fullName>
            </value>
            <value>
                <fullName>TLC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>