force-app/main/default/objects/Property__c/fields/Property_Description_in_words__c.field-meta.xml
<CustomField>
    <fullName>Property_Description_in_words__c</fullName>
    <label>Property Description in words</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>