force-app/main/default/objects/Property__c/fields/Property_Facing__c.field-meta.xml
<CustomField>
    <fullName>Property_Facing__c</fullName>
    <label>Property Facing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>North</fullName>
            </value>
            <value>
                <fullName>East</fullName>
            </value>
            <value>
                <fullName>South</fullName>
            </value>
            <value>
                <fullName>West</fullName>
            </value>
            <value>
                <fullName>SouthEast</fullName>
            </value>
            <value>
                <fullName>NorthWest</fullName>
            </value>
            <value>
                <fullName>NorthEast</fullName>
            </value>
            <value>
                <fullName>Corner</fullName>
            </value>
            <value>
                <fullName>WestSouth</fullName>
            </value>
            <value>
                <fullName>WestToint</fullName>
            </value>
            <value>
                <fullName>SouthWest</fullName>
            </value>
            <value>
                <fullName>NorthSouth</fullName>
            </value>
            <value>
                <fullName>EastSouth</fullName>
            </value>
            <value>
                <fullName>EastWest</fullName>
            </value>
            <value>
                <fullName>EastNorthWest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>