force-app/main/default/objects/Property__c/fields/Property_Id__c.field-meta.xml
<CustomField>
    <fullName>Property_Id__c</fullName>
    <label>Property Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>