force-app/main/default/objects/Property__c/fields/Property_on_Floor__c.field-meta.xml
<CustomField>
    <fullName>Property_on_Floor__c</fullName>
    <label>Floor Number</label>
    <length>200</length>
    <type>Text</type>
</CustomField>