force-app/main/default/objects/Property__c/fields/Property_Size_Details__c.field-meta.xml
<CustomField>
    <fullName>Property_Size_Details__c</fullName>
    <label>Property Size Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>