force-app/main/default/objects/Property__c/fields/Property_Type__c.field-meta.xml
<CustomField>
    <fullName>Property_Type__c</fullName>
    <label>Property Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Title__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flat</fullName>
                <label>Flat / Apartment</label>
            </value>
            <value>
                <fullName>Plot</fullName>
                <label>Plot / Land</label>
            </value>
            <value>
                <fullName>House</fullName>
                <label>House / Villa</label>
            </value>
            <value>
                <fullName>Shop/Showroom</fullName>
                <label>Shop / Showroom</label>
            </value>
            <value>
                <fullName>Offices Space</fullName>
            </value>
            <value>
                <fullName>Industrial Land</fullName>
            </value>
            <value>
                <fullName>Agriculture</fullName>
            </value>
            <value>
                <fullName>Farm House</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>