force-app/main/default/objects/Property__c/fields/Registered_By__c.field-meta.xml
<CustomField>
    <fullName>Registered_By__c</fullName>
    <label>Registered By</label>
    <length>50</length>
    <type>Text</type>
</CustomField>