force-app/main/default/objects/Property__c/fields/Registration_Charges__c.field-meta.xml
<CustomField>
    <fullName>Registration_Charges__c</fullName>
    <label>Registration Charges</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>