force-app/main/default/objects/Property__c/fields/Rent_Per_Month__c.field-meta.xml
<CustomField>
    <fullName>Rent_Per_Month__c</fullName>
    <label>Rent (Per Month)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>