force-app/main/default/objects/Property__c/fields/RERA_ID_If_Available__c.field-meta.xml
<CustomField>
    <fullName>RERA_ID_If_Available__c</fullName>
    <label>RERA ID (If Available)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>