force-app/main/default/objects/Property__c/fields/Sewerage__c.field-meta.xml
<CustomField>
    <fullName>Sewerage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sewerage</label>
    <type>Checkbox</type>
</CustomField>