force-app/main/default/objects/Property__c/fields/Size_in__c.field-meta.xml
<CustomField>
    <fullName>Size_in__c</fullName>
    <label>Size in</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sq. Yards</fullName>
            </value>
            <value>
                <fullName>Sq. Ft.</fullName>
                <default>true</default>
                <label>Sq. Ft.</label>
            </value>
            <value>
                <fullName>Sq. Mtr.</fullName>
            </value>
            <value>
                <fullName>Acre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>