force-app/main/default/objects/Property__c/fields/Size_in_acer__c.field-meta.xml
<CustomField>
    <fullName>Size_in_acer__c</fullName>
    <label>Size in acre</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>